# RedPajama-Data

./: README.md
app/: .dockerignore  pyproject.toml
app/src/: prep_artifacts.py
app/src/artifacts/: ft_trainer.py  update_resources.py
configs/: default.conf  default_local.conf
scripts/: apptainer_run_lsh.sh  apptainer_run_quality_signals.sh  run_prep_artifact_local.sh  run_prep_artifacts.sh  run_prep_artifacts_local.sh
