[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jianghong <YJianghong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dill = "^0.3.7"
tqdm = "^4.66.1"
nltk = "^3.8.1"
polars = "^0.20.2"
pyarrow = "^14.0.2"
numpy = "^1.26.2"
msgspec = "^0.18.5"
networkit = "^10.1"
scrubadub = "^2.0.1"
textstat = "^0.7.3"
xopen = "^1.8.0"
rich = "^13.7.0"
progiter = "^2.0.0"
pybloomfiltermmap3 = "^0.5.7"
transformers = "^4.36.2"
fasttext-wheel = "^0.9.2"
aiobotocore = "^2.9.0"
s3fs = "^2023.12.2"
boto3 = "1.33.13"
datasets = "2.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
